[package]
name = "assetpacker"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
serde = { version = "1.0", features = ["rc", "derive"] }
guillotiere = "0.6.2"
serde_json = "1.0.117"
fontdue = "0.9.2"
image = "0.24.7"
glam = { version = "0.28.0", features = ["serde"] }
sdfer = { version = "0.2.1", features = ["image"] }
